user login, database models to store user answers to questions

--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -1,7 +1,7 @@
-{% extends "master.html" %}
+{% extends "site_base.html" %}
 
-{% block title %}
-{{m.title}} - GovReady
+{% block head_title %}
+{{m.title}}
 {% endblock %}
 
 {% block body %}
