--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -1,3 +1,4 @@
+{# see https://github.com/pinax/pinax-theme-bootstrap/blob/master/pinax_theme_bootstrap/templates/theme_bootstrap/base.html #}
 {% extends "theme_bootstrap/base.html" %}
 {% block viewport %}
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
