stub for ask another team member, render prompts as templates+markdown

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,6 @@ Welcome
 
 <p>Or start a new module:</p>
 
-<p><a href="/tasks/start?module=sample_module">Sample Module</a></p>
+<p><a href="/tasks/start?module=sample_module">Sample Module About An Animal</a></p>
 
 {% endblock %}
