--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -1,5 +1,8 @@
 {# see https://github.com/pinax/pinax-theme-bootstrap/blob/master/pinax_theme_bootstrap/templates/theme_bootstrap/base.html #}
 {% extends "theme_bootstrap/base.html" %}
+
+{% load staticfiles %}
+
 {% block viewport %}
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta charset="utf-8">
@@ -11,10 +14,12 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" integrity="sha256-VBrFgheoreGl4pKmWgZh3J23pJrhNlSUOBek+8Z2Gv0=" crossorigin="anonymous">
 
-<link rel="stylesheet" href="static/css/main.css">
+<link rel="stylesheet" href="{% static "css/main.css" %}">
 {% endblock %}
 
 {% block topbar_base %}
+{% include "bootstrap-helpers.html" %}
+
 <div class="container">
 <header style="font-size: 80%; font-weight: bold; padding: .5em 0; border-bottom: 1px solid black; margin-bottom: 15px;">
 	<div style="float: right">
@@ -37,5 +42,10 @@ GOVREADY GUIDED MODULES
 {% block theme_script %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js" integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<script src="static/js/main.js"></script>
+<script src="{% static "js/main.js" %}"></script>
+<script src="{% static "bootstrap/bootstrap-helpers.js" %}"></script>
+
+<script>
+$(document).ajaxSend(function(event, xhr, settings) { if (!/^https?:.*/.test(settings.url)) xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"); });
+</script>
 {% endblock %}
