--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -30,7 +30,7 @@
 			<a href="/account/logout/">Log Out</a>
 		{% endif %}
 	</div>
-GOVREADY GUIDED MODULES
+GOVREADY Q
 </header>
 </div>
 {% endblock %}
